# banana-peel

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
banana_peel/: __init__.py  __main__.py  cli.py  remover.py  utils.py
tests/: test_remover_logic.py  test_utils.py
